Publications Endpoint + OpenAPI + Models
Publications end point has been implemented. It can handle changes to all 4 models.
Date convertor has been added to parse date passed to the API.
Models have been updated:
    - The personal model now has a primary key of EmpID, It returns the Emp_ID when called as an object.
    - The conference model has had the name field removed as Emp_ID is sufficient.
    - The DOI, Emp_ID and author position together form a unique field constraint.
The OpenAPI docs have been updated to better reflect the use of the GET request.
